@@ -1,4 +1,6 @@
 JAVA JDK 21VERSION
-![image](https://github.com/user-attachments/assets/93a20e35-bb32-4f66-acdc-99dbf91cb650)
+![image](https://github.com/user-attachments/assets/f33e550e-2698-4670-813a-7f0e418283c5)
+open properties in the library and add this:
+--add-opens java.desktop/sun.awt=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED
 
 add these two files in the library it can begin to work
